--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server:dev": "nodemon server/index.js --exec babel-node --ignore src"
+    "server:dev": "nodemon server/index.js --exec babel-node --ignore src",
+    "server:build": "babel server -d dist",
+    "server:start": "node dist/index.js"
   },
   "eslintConfig": {
     "extends": [
